# advanced-programing

./: 2att.csv  CLI.hpp  CMakeLists.txt  ClassifyDataCommand.hpp  Command.hpp  DefaultIO.hpp  DisplayResultsCommand.hpp  DownloadResultsCommand.hpp  Flower.cpp  Flower.hpp  Iris.cpp  Iris.hpp  README.md  Server.cpp  Server.h  SocketIO.hpp  StandardIO.hpp  UploadFilesCommand.hpp  UserData.hpp  advanced programing.sln  hello.cpp  main.cpp  tcp_client.cpp  tcp_server.cpp  utilityFunctions.cpp  utilityFunctions.hpp
Client/: Client.cpp  Client.hpp  main.cpp  tcp_client.cpp
Server/: AlgorithemSettingsCommand.hpp  CLI.hpp  ClassifyDataCommand.hpp  Command.hpp  ConfusionMatrixCommand.hpp  DisplayResultsCommand.hpp  DownloadResultsCommand.hpp  Iris.cpp  Iris.hpp  Server.cpp  Server.hpp  UploadFilesCommand.hpp  UserData.hpp  main.cpp
advanced programing/: Flower.cpp  Flower.h  advanced programing.vcxproj  advanced programing.vcxproj.filters  ass1.cpp  main.cpp
