cmake_minimum_required(VERSION 3.0.0)
project(AP VERSION 0.1.0)

include(CTest)
enable_testing()
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_compile_options(-pthread)
add_executable(Server Server/main.cpp Server/Iris.cpp Server/Server.cpp)
target_link_libraries(Server PRIVATE Threads::Threads)
add_executable(Client Client/main.cpp Client/Client.cpp)
target_link_libraries(Client PRIVATE Threads::Threads)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
